# CompVertID

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: GUIDE.md
examples/: example_compound_discoverer.xlsx  example_names_only.txt  example_with_formula.csv
src/compvertid/: __init__.py  cli.py  config.py  core.py  gui.py  i18n.py  input_loader.py  kegg_api.py  logging_setup.py
tests/: false_alarm_analysis.py  gui_headless_test.py  gui_screenshot.py  smoke_test.py
